--- a/app/src/main/res/layout/activity_settings_page.xml
+++ b/app/src/main/res/layout/activity_settings_page.xml
@@ -64,9 +64,18 @@
                 android:layout_height="wrap_content" />
 
         </LinearLayout>
-
-
-
     </LinearLayout>
+
+    <Button
+        android:id="@+id/test_wipe"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginTop="15dp"
+        android:text="@string/wipe"
+        android:background="@drawable/background_button"
+        app:layout_constraintTop_toBottomOf="@+id/amgoaltitle_card" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
